kubernetes/apps/base/istio-ingress/istio-gateway/app/gateway.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.raspbernetes.com/networking.istio.io/gateway_v1beta1.json
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: istio-ingressgateway
  namespace: istio-ingress
spec:
  selector:
    app: istio-gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - '${CLUSTER_DOMAIN}'
        - '*.${CLUSTER_DOMAIN}'
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - '${CLUSTER_DOMAIN}'
        - '*.${CLUSTER_DOMAIN}'
      tls:
        credentialName: raspbernetes-com-le
        mode: SIMPLE
        minProtocolVersion: TLSV1_2
        maxProtocolVersion: TLSV1_3
